--- a/base.css
+++ b/base.css
@@ -4,8 +4,14 @@
 }
 
 :root {
+  /* color vars */
   --Slate-300: hsl(212, 45%, 89%);
   --Slate-500: hsl(216, 15%, 48%);
   --Slate-900: hsl(218, 44%, 22%);
   --White: hsl(0, 0%, 100%);
+
+  /* Spacing vars */
+  --Spacing-500: 40px;
+  --Spacing-300: 24px;
+  --Spacing-200: 16px;
 }
