--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ body {
 
 .card-container {
   background-color: var(--Slate-300);
-  width: 375px;
+  max-width: 375px;
   height: 100%;
   margin: auto;
   display: flex;
@@ -25,7 +25,7 @@ body {
   background-color: var(--White);
   padding: var(--Spacing-200);
   border-radius: 20px;
-  width: 320px;
+  max-width: 320px;
 }
 
 .QR-code {
@@ -56,6 +56,6 @@ p {
 
 @media (width > 375px) {
   .card-container {
-    width: 1440px;
+    max-width: 1440px;
   }
 }
