--- a/main.css
+++ b/main.css
@@ -6,15 +6,15 @@
 
 html,
 body {
-  height: 100%;
+  height: 100vh;
   text-align: center;
-  font-family: "Outfit";
+  font-family: "Outfit", Arial, Helvetica, sans-serif;
 }
 
 .card-container {
   background-color: var(--Slate-300);
   max-width: 375px;
-  height: 100%;
+  height: 100vh;
   margin: auto;
   display: flex;
   justify-content: center;
@@ -54,7 +54,7 @@ p {
   color: var(--Slate-500);
 }
 
-@media (width > 375px) {
+@media (width >= 376px) {
   .card-container {
     max-width: 1440px;
   }
