--- a/main.css
+++ b/main.css
@@ -11,51 +11,57 @@ body {
   font-family: "Outfit", Arial, Helvetica, sans-serif;
 }
 
-.card-container {
+.p-main {
   background-color: var(--Slate-300);
-  max-width: 375px;
-  height: 100vh;
+  max-inline-size: 90rem;
+  block-size: 100vh;
   margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.card {
+.c-card {
   background-color: var(--White);
   padding: var(--Spacing-200);
-  border-radius: 20px;
-  max-width: 320px;
+  border-radius: 1.25rem;
+  max-inline-size: 20rem;
 }
 
-.QR-code {
+.c-card__QR-code {
   width: 100%;
-  border-radius: 10px;
+  border-radius: 0.625rem;
 }
 
-.texts {
+.c-card__body {
   padding: var(--Spacing-200) var(--Spacing-200) var(--Spacing-300)
     var(--Spacing-200);
 }
 
-h1 {
+.c-card__title {
   font-weight: 700;
-  font-size: 22px;
+  font-size: 1.375rem;
   line-height: 120%;
   color: var(--Slate-900);
-  margin-bottom: 14px;
+  margin-block-end: 0.875rem;
 }
 
-p {
+.c-card__description {
   font-weight: 400;
-  font-size: 15px;
+  font-size: 0.9375rem;
   line-height: 140%;
-  letter-spacing: 0.2px;
+  letter-spacing: 0.0125rem;
   color: var(--Slate-500);
 }
 
-@media (width >= 376px) {
-  .card-container {
-    max-width: 1440px;
-  }
+.p-footer {
+  padding: 1rem;
+}
+
+.attribution {
+  font-family: monospace;
+  border: 0.1rem solid var(--Slate-900);
+  padding: 1rem;
+  inline-size: fit-content;
+  margin: 0 auto;
 }
